testing reductions of duplication

--- a/Archive/web-scraping copy.ipynb
+++ b/Archive/web-scraping copy.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -631,382 +631,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 5 most frequent lemmas:\n",
-      "Lemma: 'laser' - Frequency: 40\n",
-      "Lemma: 'headlight' - Frequency: 28\n",
-      "Lemma: 'beam' - Frequency: 12\n",
-      "Lemma: 'technology' - Frequency: 10\n",
-      "Lemma: 'led' - Frequency: 10\n",
-      "\n",
-      "All lemma frequencies:\n",
-      "Lemma: 'laser' - Frequency: 40\n",
-      "Lemma: 'headlights' - Frequency: 2\n",
-      "Lemma: 'work' - Frequency: 3\n",
-      "Lemma: '130' - Frequency: 1\n",
-      "Lemma: 'comment' - Frequency: 1\n",
-      "Lemma: 'lewin' - Frequency: 1\n",
-      "Lemma: 'day' - Frequency: 4\n",
-      "Lemma: 'march' - Frequency: 2\n",
-      "Lemma: '22' - Frequency: 1\n",
-      "Lemma: '2021' - Frequency: 1\n",
-      "Lemma: 'think' - Frequency: 1\n",
-      "Lemma: 'onward' - Frequency: 1\n",
-      "Lemma: 'automotive' - Frequency: 6\n",
-      "Lemma: 'technology' - Frequency: 10\n",
-      "Lemma: 'headlight' - Frequency: 28\n",
-      "Lemma: 'usually' - Frequency: 1\n",
-      "Lemma: 'thing' - Frequency: 3\n",
-      "Lemma: 'come' - Frequency: 7\n",
-      "Lemma: 'mind' - Frequency: 3\n",
-      "Lemma: 'engine' - Frequency: 1\n",
-      "Lemma: 'fuel' - Frequency: 1\n",
-      "Lemma: 'efficiency' - Frequency: 3\n",
-      "Lemma: 'switch' - Frequency: 2\n",
-      "Lemma: 'electric' - Frequency: 1\n",
-      "Lemma: 'power' - Frequency: 3\n",
-      "Lemma: 'mean' - Frequency: 2\n",
-      "Lemma: 'thousand' - Frequency: 1\n",
-      "Lemma: 'engineer' - Frequency: 2\n",
-      "Lemma: 'world' - Frequency: 2\n",
-      "Lemma: 'improve' - Frequency: 1\n",
-      "Lemma: 'state' - Frequency: 2\n",
-      "Lemma: 'art' - Frequency: 1\n",
-      "Lemma: 'lighting' - Frequency: 4\n",
-      "Lemma: 'seal' - Frequency: 2\n",
-      "Lemma: 'beam' - Frequency: 12\n",
-      "Lemma: 'give' - Frequency: 1\n",
-      "Lemma: 'way' - Frequency: 4\n",
-      "Lemma: 'modern' - Frequency: 2\n",
-      "Lemma: 'design' - Frequency: 6\n",
-      "Lemma: 'regulation' - Frequency: 1\n",
-      "Lemma: 'loosen' - Frequency: 1\n",
-      "Lemma: 'bulb' - Frequency: 1\n",
-      "Lemma: 'move' - Frequency: 2\n",
-      "Lemma: 'simple' - Frequency: 3\n",
-      "Lemma: 'halogen' - Frequency: 1\n",
-      "Lemma: 'xenon' - Frequency: 1\n",
-      "Lemma: 'hids' - Frequency: 1\n",
-      "Lemma: 'recently' - Frequency: 1\n",
-      "Lemma: 'led' - Frequency: 10\n",
-      "Lemma: 'new' - Frequency: 3\n",
-      "Lemma: 'scene' - Frequency: 1\n",
-      "Lemma: 'bwm' - Frequency: 2\n",
-      "Lemma: 'prototype' - Frequency: 1\n",
-      "Lemma: 'assembly' - Frequency: 2\n",
-      "Lemma: 'undergo' - Frequency: 1\n",
-      "Lemma: 'testing' - Frequency: 1\n",
-      "Lemma: 'image' - Frequency: 2\n",
-      "Lemma: 'bring' - Frequency: 2\n",
-      "Lemma: 'phrase' - Frequency: 1\n",
-      "Lemma: 'fire' - Frequency: 2\n",
-      "Lemma: 'automobile' - Frequency: 2\n",
-      "Lemma: 'obviously' - Frequency: 1\n",
-      "Lemma: 'coherent' - Frequency: 1\n",
-      "Lemma: 'monochromatic' - Frequency: 1\n",
-      "Lemma: 'light' - Frequency: 10\n",
-      "Lemma: 'poor' - Frequency: 1\n",
-      "Lemma: 'illumination' - Frequency: 2\n",
-      "Lemma: 'outside' - Frequency: 1\n",
-      "Lemma: 'specific' - Frequency: 1\n",
-      "Lemma: 'spot' - Frequency: 2\n",
-      "Lemma: 'distance' - Frequency: 1\n",
-      "Lemma: 'away' - Frequency: 1\n",
-      "Lemma: 'thankfully' - Frequency: 2\n",
-      "Lemma: 'eye' - Frequency: 1\n",
-      "Lemma: 'instead' - Frequency: 1\n",
-      "Lemma: 'consist' - Frequency: 1\n",
-      "Lemma: 'solid' - Frequency: 1\n",
-      "Lemma: 'diode' - Frequency: 5\n",
-      "Lemma: 'mount' - Frequency: 1\n",
-      "Lemma: 'inside' - Frequency: 3\n",
-      "Lemma: 'blue' - Frequency: 1\n",
-      "Lemma: 'yellow' - Frequency: 1\n",
-      "Lemma: 'phosphor' - Frequency: 3\n",
-      "Lemma: 'similar' - Frequency: 1\n",
-      "Lemma: 'white' - Frequency: 2\n",
-      "Lemma: 'produce' - Frequency: 1\n",
-      "Lemma: 'powerful' - Frequency: 2\n",
-      "Lemma: 'vibrant' - Frequency: 1\n",
-      "Lemma: 'bounce' - Frequency: 1\n",
-      "Lemma: 'reflector' - Frequency: 1\n",
-      "Lemma: 'road' - Frequency: 2\n",
-      "Lemma: 'build' - Frequency: 2\n",
-      "Lemma: 'benefit' - Frequency: 2\n",
-      "Lemma: 'energy' - Frequency: 1\n",
-      "Lemma: 'efficient' - Frequency: 2\n",
-      "Lemma: 'space' - Frequency: 1\n",
-      "Lemma: 'futuristic' - Frequency: 1\n",
-      "Lemma: 'i8' - Frequency: 1\n",
-      "Lemma: 'vehicle' - Frequency: 4\n",
-      "Lemma: 'ship' - Frequency: 1\n",
-      "Lemma: 'nascent' - Frequency: 1\n",
-      "Lemma: 'far' - Frequency: 2\n",
-      "Lemma: 'appear' - Frequency: 1\n",
-      "Lemma: 'bmw' - Frequency: 4\n",
-      "Lemma: 'audi' - Frequency: 1\n",
-      "Lemma: 'select' - Frequency: 1\n",
-      "Lemma: 'develop' - Frequency: 1\n",
-      "Lemma: 'partnership' - Frequency: 1\n",
-      "Lemma: 'expert' - Frequency: 1\n",
-      "Lemma: 'osram' - Frequency: 1\n",
-      "Lemma: 'practice' - Frequency: 1\n",
-      "Lemma: 'regular' - Frequency: 2\n",
-      "Lemma: 'lead' - Frequency: 6\n",
-      "Lemma: 'low' - Frequency: 4\n",
-      "Lemma: 'lamp' - Frequency: 2\n",
-      "Lemma: 'create' - Frequency: 1\n",
-      "Lemma: 'incredibly' - Frequency: 1\n",
-      "Lemma: 'bright' - Frequency: 1\n",
-      "Lemma: 'focused' - Frequency: 1\n",
-      "Lemma: 'high' - Frequency: 9\n",
-      "Lemma: 'provide' - Frequency: 1\n",
-      "Lemma: '600' - Frequency: 1\n",
-      "Lemma: 'meter' - Frequency: 1\n",
-      "Lemma: 'ahead' - Frequency: 1\n",
-      "Lemma: 'double' - Frequency: 1\n",
-      "Lemma: 'conventional' - Frequency: 1\n",
-      "Lemma: 'use' - Frequency: 2\n",
-      "Lemma: 'indium' - Frequency: 1\n",
-      "Lemma: 'gallium' - Frequency: 1\n",
-      "Lemma: 'nitride' - Frequency: 1\n",
-      "Lemma: 'originally' - Frequency: 1\n",
-      "Lemma: 'projector' - Frequency: 2\n",
-      "Lemma: 'level' - Frequency: 1\n",
-      "Lemma: '1' - Frequency: 1\n",
-      "Lemma: 'watt' - Frequency: 1\n",
-      "Lemma: 'challenge' - Frequency: 2\n",
-      "Lemma: 'implement' - Frequency: 1\n",
-      "Lemma: 'environment' - Frequency: 2\n",
-      "Lemma: 'need' - Frequency: 1\n",
-      "Lemma: 'operate' - Frequency: 1\n",
-      "Lemma: 'temperature' - Frequency: 3\n",
-      "Lemma: 'extreme' - Frequency: 1\n",
-      "Lemma: 'research' - Frequency: 1\n",
-      "Lemma: 'pointer' - Frequency: 1\n",
-      "Lemma: 'primarily' - Frequency: 1\n",
-      "Lemma: 'typical' - Frequency: 1\n",
-      "Lemma: 'room' - Frequency: 1\n",
-      "Lemma: 'able' - Frequency: 1\n",
-      "Lemma: 'withstand' - Frequency: 1\n",
-      "Lemma: '40' - Frequency: 1\n",
-      "Lemma: 'degree' - Frequency: 2\n",
-      "Lemma: 'zero' - Frequency: 1\n",
-      "Lemma: '50' - Frequency: 1\n",
-      "Lemma: 'c.' - Frequency: 1\n",
-      "Lemma: 'huge' - Frequency: 1\n",
-      "Lemma: 'heat' - Frequency: 1\n",
-      "Lemma: 'output' - Frequency: 2\n",
-      "Lemma: 'complicate' - Frequency: 1\n",
-      "Lemma: 'engineering' - Frequency: 2\n",
-      "Lemma: 'involve' - Frequency: 1\n",
-      "Lemma: 'tailor' - Frequency: 1\n",
-      "Lemma: 'optic' - Frequency: 1\n",
-      "Lemma: 'package' - Frequency: 2\n",
-      "Lemma: 'rough' - Frequency: 1\n",
-      "Lemma: 'tumble' - Frequency: 1\n",
-      "Lemma: 'vibration' - Frequency: 1\n",
-      "Lemma: 'find' - Frequency: 1\n",
-      "Lemma: 'application' - Frequency: 2\n",
-      "Lemma: 'important' - Frequency: 2\n",
-      "Lemma: 'ensure' - Frequency: 1\n",
-      "Lemma: 'device' - Frequency: 1\n",
-      "Lemma: 'end' - Frequency: 4\n",
-      "Lemma: 'user' - Frequency: 2\n",
-      "Lemma: 'expose' - Frequency: 1\n",
-      "Lemma: 'harmful' - Frequency: 1\n",
-      "Lemma: 'radiation' - Frequency: 1\n",
-      "Lemma: 'event' - Frequency: 2\n",
-      "Lemma: 'accident' - Frequency: 1\n",
-      "Lemma: 'malfunction' - Frequency: 1\n",
-      "Lemma: 'tear' - Frequency: 2\n",
-      "Lemma: 'marketing' - Frequency: 1\n",
-      "Lemma: 'show' - Frequency: 1\n",
-      "Lemma: 'construction' - Frequency: 1\n",
-      "Lemma: 'aftermarket' - Frequency: 6\n",
-      "Lemma: 'grain' - Frequency: 1\n",
-      "Lemma: 'salt' - Frequency: 1\n",
-      "Lemma: 'difficult' - Frequency: 1\n",
-      "Lemma: 'imagine' - Frequency: 1\n",
-      "Lemma: '10' - Frequency: 1\n",
-      "Lemma: 'w' - Frequency: 1\n",
-      "Lemma: 'shine' - Frequency: 1\n",
-      "Lemma: 'directly' - Frequency: 3\n",
-      "Lemma: 'small' - Frequency: 1\n",
-      "Lemma: 'melt' - Frequency: 1\n",
-      "Lemma: 'hole' - Frequency: 1\n",
-      "Lemma: 'board' - Frequency: 1\n",
-      "Lemma: 'short' - Frequency: 1\n",
-      "Lemma: 'order' - Frequency: 1\n",
-      "Lemma: 'spring' - Frequency: 1\n",
-      "Lemma: 'delightfully' - Frequency: 1\n",
-      "Lemma: 'innovative' - Frequency: 1\n",
-      "Lemma: 'combined' - Frequency: 1\n",
-      "Lemma: 'readily' - Frequency: 1\n",
-      "Lemma: 'available' - Frequency: 2\n",
-      "Lemma: 'alibaba' - Frequency: 1\n",
-      "Lemma: 'drop' - Frequency: 1\n",
-      "Lemma: 'replacement' - Frequency: 1\n",
-      "Lemma: 'exist' - Frequency: 1\n",
-      "Lemma: 'combine' - Frequency: 1\n",
-      "Lemma: 'shoot' - Frequency: 1\n",
-      "Lemma: 'excite' - Frequency: 1\n",
-      "Lemma: 'unit' - Frequency: 1\n",
-      "Lemma: 'fan' - Frequency: 1\n",
-      "Lemma: 'cooling' - Frequency: 1\n",
-      "Lemma: 'maximum' - Frequency: 1\n",
-      "Lemma: 'operational' - Frequency: 1\n",
-      "Lemma: 'development' - Frequency: 1\n",
-      "Lemma: 'exciting' - Frequency: 2\n",
-      "Lemma: 'wary' - Frequency: 1\n",
-      "Lemma: 'performance' - Frequency: 4\n",
-      "Lemma: 'unknown' - Frequency: 1\n",
-      "Lemma: 'upgrade' - Frequency: 1\n",
-      "Lemma: 'fail' - Frequency: 1\n",
-      "Lemma: 'pass' - Frequency: 2\n",
-      "Lemma: 'muster' - Frequency: 1\n",
-      "Lemma: 'real' - Frequency: 1\n",
-      "Lemma: 'reason' - Frequency: 1\n",
-      "Lemma: 'believe' - Frequency: 1\n",
-      "Lemma: 'hybrid' - Frequency: 1\n",
-      "Lemma: 'different' - Frequency: 1\n",
-      "Lemma: 'love' - Frequency: 1\n",
-      "Lemma: 'selection' - Frequency: 1\n",
-      "Lemma: 'part' - Frequency: 3\n",
-      "Lemma: 'iihs' - Frequency: 1\n",
-      "Lemma: 'test' - Frequency: 1\n",
-      "Lemma: 'protocol' - Frequency: 1\n",
-      "Lemma: 'sadly' - Frequency: 1\n",
-      "Lemma: 'scope' - Frequency: 1\n",
-      "Lemma: 'budget' - Frequency: 1\n",
-      "Lemma: 'article' - Frequency: 1\n",
-      "Lemma: 'mikeselectricstuff' - Frequency: 1\n",
-      "Lemma: 'happen' - Frequency: 1\n",
-      "Lemma: 'lay' - Frequency: 2\n",
-      "Lemma: 'hand' - Frequency: 1\n",
-      "Lemma: 'workshop' - Frequency: 1\n",
-      "Lemma: 'make' - Frequency: 1\n",
-      "Lemma: 'tick' - Frequency: 1\n",
-      "Lemma: 'difference' - Frequency: 1\n",
-      "Lemma: 'multitude' - Frequency: 1\n",
-      "Lemma: 'bare' - Frequency: 1\n",
-      "Lemma: 'bench' - Frequency: 1\n",
-      "Lemma: 'aliexpress' - Frequency: 1\n",
-      "Lemma: 'relatively' - Frequency: 1\n",
-      "Lemma: 'wire' - Frequency: 1\n",
-      "Lemma: 'differently' - Frequency: 1\n",
-      "Lemma: 'interestingly' - Frequency: 1\n",
-      "Lemma: 'circuit' - Frequency: 1\n",
-      "Lemma: 'run' - Frequency: 1\n",
-      "Lemma: 'time' - Frequency: 2\n",
-      "Lemma: 'prevent' - Frequency: 1\n",
-      "Lemma: 'blind' - Frequency: 1\n",
-      "Lemma: 'shutter' - Frequency: 1\n",
-      "Lemma: 'keep' - Frequency: 1\n",
-      "Lemma: 'place' - Frequency: 1\n",
-      "Lemma: 'block' - Frequency: 1\n",
-      "Lemma: 'solenoid' - Frequency: 1\n",
-      "Lemma: 'driver' - Frequency: 2\n",
-      "Lemma: 'turn' - Frequency: 1\n",
-      "Lemma: 'little' - Frequency: 1\n",
-      "Lemma: 'left' - Frequency: 1\n",
-      "Lemma: 'field' - Frequency: 1\n",
-      "Lemma: 'entirely' - Frequency: 1\n",
-      "Lemma: 'cutting' - Frequency: 1\n",
-      "Lemma: 'edge' - Frequency: 1\n",
-      "Lemma: 'hook' - Frequency: 1\n",
-      "Lemma: 'multiple' - Frequency: 1\n",
-      "Lemma: 'connector' - Frequency: 1\n",
-      "Lemma: '30' - Frequency: 1\n",
-      "Lemma: 'conductor' - Frequency: 1\n",
-      "Lemma: 'electronic' - Frequency: 1\n",
-      "Lemma: 'live' - Frequency: 1\n",
-      "Lemma: 'external' - Frequency: 1\n",
-      "Lemma: 'controller' - Frequency: 1\n",
-      "Lemma: 'drive' - Frequency: 1\n",
-      "Lemma: 'stepper' - Frequency: 1\n",
-      "Lemma: 'motor' - Frequency: 1\n",
-      "Lemma: 'slew' - Frequency: 1\n",
-      "Lemma: 'steering' - Frequency: 1\n",
-      "Lemma: 'complexity' - Frequency: 1\n",
-      "Lemma: 'twin' - Frequency: 1\n",
-      "Lemma: 'sensor' - Frequency: 1\n",
-      "Lemma: 'monitor' - Frequency: 1\n",
-      "Lemma: 'special' - Frequency: 1\n",
-      "Lemma: 'metal' - Frequency: 1\n",
-      "Lemma: 'blocking' - Frequency: 1\n",
-      "Lemma: 'arm' - Frequency: 1\n",
-      "Lemma: 'sit' - Frequency: 1\n",
-      "Lemma: 'presumably' - Frequency: 1\n",
-      "Lemma: 'stop' - Frequency: 1\n",
-      "Lemma: 'leave' - Frequency: 1\n",
-      "Lemma: 'coat' - Frequency: 1\n",
-      "Lemma: 'burn' - Frequency: 1\n",
-      "Lemma: 'truly' - Frequency: 1\n",
-      "Lemma: 'wild' - Frequency: 1\n",
-      "Lemma: 'look' - Frequency: 1\n",
-      "Lemma: 'luxury' - Frequency: 2\n",
-      "Lemma: 'car' - Frequency: 3\n",
-      "Lemma: 'old' - Frequency: 1\n",
-      "Lemma: 'cost' - Frequency: 1\n",
-      "Lemma: 'versus' - Frequency: 1\n",
-      "Lemma: 'despite' - Frequency: 1\n",
-      "Lemma: 'gain' - Frequency: 2\n",
-      "Lemma: 'remain' - Frequency: 2\n",
-      "Lemma: 'expensive' - Frequency: 2\n",
-      "Lemma: 'cheap' - Frequency: 1\n",
-      "Lemma: 'trickle' - Frequency: 1\n",
-      "Lemma: 'model' - Frequency: 1\n",
-      "Lemma: 'likely' - Frequency: 1\n",
-      "Lemma: 'economy' - Frequency: 1\n",
-      "Lemma: 'scale' - Frequency: 1\n",
-      "Lemma: 'change' - Frequency: 1\n",
-      "Lemma: 'well' - Frequency: 1\n",
-      "Lemma: 'national' - Frequency: 1\n",
-      "Lemma: 'authority' - Frequency: 1\n",
-      "Lemma: 'begin' - Frequency: 1\n",
-      "Lemma: 'demand' - Frequency: 1\n",
-      "Lemma: 'standard' - Frequency: 1\n",
-      "Lemma: 'norm' - Frequency: 2\n",
-      "Lemma: 'naturally' - Frequency: 1\n",
-      "Lemma: 'apply' - Frequency: 1\n",
-      "Lemma: 'home' - Frequency: 2\n",
-      "Lemma: 'commercial' - Frequency: 1\n",
-      "Lemma: 'suspect' - Frequency: 1\n",
-      "Lemma: 'potential' - Frequency: 1\n",
-      "Lemma: 'limit' - Frequency: 1\n",
-      "Lemma: 'compact' - Frequency: 1\n",
-      "Lemma: 'allow' - Frequency: 2\n",
-      "Lemma: 'great' - Frequency: 2\n",
-      "Lemma: 'freedom' - Frequency: 2\n",
-      "Lemma: 'currently' - Frequency: 1\n",
-      "Lemma: 'stand' - Frequency: 1\n",
-      "Lemma: 'appeal' - Frequency: 1\n",
-      "Lemma: 'packaging' - Frequency: 1\n",
-      "Lemma: 'designer' - Frequency: 1\n",
-      "Lemma: 'area' - Frequency: 1\n",
-      "Lemma: 'concern' - Frequency: 1\n",
-      "Lemma: 'factor' - Frequency: 1\n",
-      "Lemma: 'fitting' - Frequency: 1\n",
-      "Lemma: 'office' - Frequency: 1\n",
-      "Lemma: 'regardless' - Frequency: 1\n",
-      "Lemma: 'sure' - Frequency: 1\n",
-      "Lemma: 'future' - Frequency: 1\n",
-      "Lemma: 'post' - Frequency: 1\n",
-      "Lemma: 'hack' - Frequency: 1\n",
-      "Lemma: 'featured' - Frequency: 1\n",
-      "Lemma: 'hacks' - Frequency: 1\n",
-      "Lemma: 'slidertagged' - Frequency: 1\n"
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Load the article HTML from the pickle file\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(PICKLE_FILE, \u001b[33m\"\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     article_html = \u001b[43mpickle\u001b[49m.load(f)\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Parse the HTML and extract text\u001b[39;00m\n\u001b[32m      8\u001b[39m soup = BeautifulSoup(article_html, \u001b[33m\"\u001b[39m\u001b[33mhtml.parser\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'pickle' is not defined"
      ]
     }
    ],
    "source": [
+    "\n",
     "PICKLE_FILE = \"article_html.pkl\"\n",
     "\n",
     "# Load the article HTML from the pickle file\n",
@@ -1016,7 +657,6 @@
     "# Parse the HTML and extract text\n",
     "soup = BeautifulSoup(article_html, \"html.parser\")\n",
     "text = soup.get_text()\n",
-    "\n",
     "# Load a trained spaCy pipeline \n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "doc = nlp(text)\n",
@@ -1055,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
