--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1118,8 +1118,6 @@
     "    count = sum(1 for lemma in lemmas if lemma in interesting_lemmas)\n",
     "    return count / len(lemmas)\n",
     "\n",
-    "# --- Test the functions ---\n",
-    "\n",
     "# Load article HTML and extract text\n",
     "with open(PICKLE_FILE, \"rb\") as f:\n",
     "    article_html = pickle.load(f)\n",
@@ -1134,7 +1132,7 @@
     "sentences = list(doc.sents)\n",
     "first_sentence = sentences[0].text if sentences else \"\"\n",
     "\n",
-    "# Get frequent tokens and lemmas from previous question\n",
+    "# Get frequent tokens and lemmas \n",
     "tokens = [\n",
     "    token.text.lower()\n",
     "    for token in doc\n",
@@ -1169,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1198,9 +1196,7 @@
     "plt.ylabel(\"Number of Sentences\")\n",
     "plt.grid(axis='y')\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# Most common range of scores appears to be 0.0–0.1 (most sentences"
+    "plt.show()"
    ]
   },
   {
@@ -1212,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1241,9 +1237,7 @@
     "plt.ylabel(\"Number of Sentences\")\n",
     "plt.grid(axis='y')\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# Most common range of scores appears to be 0.0–0.1 (most sentences"
+    "plt.show()"
    ]
   },
   {
@@ -1277,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
